# mtlflashattn

./: .gitignore  README.md  _mtlflashattn_finder.py  mtlflashattn_autoload.pth  pyproject.toml
.github/workflows/: ci.yml  publish.yml
bench/: bench_attn.py
metal_flash_attn/: __init__.py  _kernel.py  _shim.py  _version.py  sdpa.py
tests/: test_dispatch_cache.py  test_flash_attn_func.py  test_flash_attn_varlen_func.py  test_packed_funcs.py  test_sdpa_patch.py  test_shim.py  test_torch_fallback.py  test_trace.py  test_v1_kernel.py  test_v2_dtype_modes.py  test_v2_kernel.py
