[project]
name = "mtlflashattn"
version = "0.1.0"
description = "Memory-efficient Metal flash-attention for PyTorch MPS, with a guarded flash_attn drop-in shim"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["metal_flash_attn"]

[tool.hatch.build.targets.wheel.force-include]
"_mtlflashattn_finder.py" = "_mtlflashattn_finder.py"
"mtlflashattn_autoload.pth" = "mtlflashattn_autoload.pth"

[tool.pytest.ini_options]
testpaths = ["tests"]
