[project]
name = "mtlflashattn"
version = "0.1.0"
description = "Memory-efficient Metal flash-attention for PyTorch MPS, with a guarded flash_attn drop-in shim"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Paweł Mazurkiewicz", email = "chillaid.engineering@gmail.com" },
]
keywords = [
    "flash-attention", "attention", "metal", "mps", "apple-silicon",
    "pytorch", "tensorops", "neural-accelerator", "m5",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: GPU",
    "Operating System :: MacOS",
]
dependencies = [
    "torch>=2.5",
]

[project.urls]
Homepage = "https://github.com/pawel-mazurkiewicz/mtlflashattn"
Repository = "https://github.com/pawel-mazurkiewicz/mtlflashattn"
Issues = "https://github.com/pawel-mazurkiewicz/mtlflashattn/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["metal_flash_attn"]

[tool.hatch.build.targets.wheel.force-include]
"_mtlflashattn_finder.py" = "_mtlflashattn_finder.py"
"mtlflashattn_autoload.pth" = "mtlflashattn_autoload.pth"

[tool.pytest.ini_options]
testpaths = ["tests"]
